--- a/static/css/settings.css
+++ b/static/css/settings.css
@@ -24,3 +24,12 @@ h1 {
   padding-top: 2px;
   padding-bottom: 2px;
 }
+
+#start-game {
+  font-size: 1.3rem;
+}
+
+#clear-cache {
+  color: red;
+  margin-top: 20px;
+}
