--- a/static/css/settings.css
+++ b/static/css/settings.css
@@ -2,6 +2,8 @@ body {
   margin: 0;
   width: 100vw;
   height: 100vh;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  background-color: #BDC0BA;
 }
 
 h1 {
@@ -30,6 +32,21 @@ h1 {
 }
 
 #clear-cache {
+  margin-top: 30px;
+}
+
+.danger-button {
+  font-size: 1.3rem;
   color: red;
-  margin-top: 20px;
+}
+
+button {
+  border-radius: 10px;
+  border-color: black;
+  border-style: solid;
+  transition: background-color 0.2s;
+}
+
+button:hover {
+  background-color: #828282;
 }
