--- a/static/css/game.css
+++ b/static/css/game.css
@@ -1,11 +1,16 @@
 body {
   margin: 0;
+  padding: 0;
   overflow: hidden;
   background-color: black;
+  width: 100vw;
+  height: 100vh;
 }
 
 #game {
   border: 0;
-  width: 100vw;
-  height: 100vh;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
